--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,15 +2,10 @@ global:
   scrape_interval: 10s
 
 rule_files:
-  - '/etc/prometheus-rules/*.rules'
+  - '/etc/prometheus/rules/*.rules'
 
 scrape_configs:
+  - job_name: 'prometheus'
 
-  - job_name: 'default'
-    file_sd_configs:
-    - files:
-      - '/etc/prometheus-targets/*-targets.yml'
-    metric_relabel_configs:
-    - action:        labelmap
-      regex:         'io_rancher_(container_name|stack_service_name|container_system)$'
-      replacement:   '$1'
+    static_configs:
+      - targets: ['localhost:9090']
